--- a/asg0.html
+++ b/asg0.html
@@ -6,9 +6,12 @@
 </head>
 
 <body onload="main()">
-<canvas id="example" width="400" height="400">
+<canvas id="example" width="400" height="400" >
 Please use a browser that supports "canvas"
 </canvas>
+<br>
+<input id="v1" type="number">
+<input id="v2" type="number">
 <script src="asg0.js"></script>
 <script src="lib/cuon-matrix-cse160.js"></script>
 </body>
