Added a form for both vectors

--- a/asg0.html
+++ b/asg0.html
@@ -10,8 +10,23 @@
 Please use a browser that supports "canvas"
 </canvas>
 <br>
-<input id="v1" type="number">
-<input id="v2" type="number">
+<form>
+    <label >V1 x:</label>
+    <input id="v1_x" type="number">
+    <label for="lname">y:</label>
+    <input id="v1_y" type="number">
+    <br>
+    <label >V2 x:</label>
+    <input id="v2_x" type="number">
+    <label >y:</label>
+    <input id="v2_y" type="number">
+    <br>
+    <input type="submit" value="Draw">
+  </form>
+
+
+<!-- <input id="v1" type="number">
+<input id="v2" type="number"> -->
 <script src="asg0.js"></script>
 <script src="lib/cuon-matrix-cse160.js"></script>
 </body>
