--- a/asg0.html
+++ b/asg0.html
@@ -13,7 +13,7 @@ Please use a browser that supports "canvas"
 <form>
     <label >V1 x:</label>
     <input id="v1_x" type="number">
-    <label for="lname">y:</label>
+    <label>y:</label>
     <input id="v1_y" type="number">
     <br>
     <label >V2 x:</label>
@@ -21,7 +21,7 @@ Please use a browser that supports "canvas"
     <label >y:</label>
     <input id="v2_y" type="number">
     <br>
-    <input type="submit" value="Draw">
+    <input type="submit" id="submit" value="Draw">
   </form>
 
 
