--- a/asg0.html
+++ b/asg0.html
@@ -24,6 +24,22 @@ Please use a browser that supports "canvas"
     <input type="submit" id="submit" value="Draw">
   </form>
 
+  <br>
+
+  <form>
+    <label>Operation:</label>
+    <select id="operation" name="operation">
+      <option value="addition">Addition</option>
+      <option value="subtraction">Subtraction</option>
+      <option value="multiply">Multiply</option>
+      <option value="divide">Divide</option>
+    </select>
+    <label>Scalar:</label>
+    <input id="scalar" type="number">
+    <br>
+    <input type="submit" id="secondSubmit" value="Draw">
+  </form>
+
 
 <!-- <input id="v1" type="number">
 <input id="v2" type="number"> -->
