--- a/asg0.html
+++ b/asg0.html
@@ -33,6 +33,8 @@ Please use a browser that supports "canvas"
       <option value="subtraction">Subtraction</option>
       <option value="multiply">Multiply</option>
       <option value="divide">Divide</option>
+      <option value="magnitude">Magnitude</option>
+      <option value="normalize">Normalize</option>
     </select>
     <label>Scalar:</label>
     <input id="scalar" type="number">
