--- a/asg0.html
+++ b/asg0.html
@@ -35,6 +35,7 @@ Please use a browser that supports "canvas"
       <option value="divide">Divide</option>
       <option value="magnitude">Magnitude</option>
       <option value="normalize">Normalize</option>
+      <option value="angle_between">Angle Between</option>
     </select>
     <label>Scalar:</label>
     <input id="scalar" type="number">
