--- a/asg0.html
+++ b/asg0.html
@@ -36,6 +36,7 @@ Please use a browser that supports "canvas"
       <option value="magnitude">Magnitude</option>
       <option value="normalize">Normalize</option>
       <option value="angle_between">Angle Between</option>
+      <option value="area">Area</option>
     </select>
     <label>Scalar:</label>
     <input id="scalar" type="number">
@@ -43,9 +44,6 @@ Please use a browser that supports "canvas"
     <input type="submit" id="secondSubmit" value="Draw">
   </form>
 
-
-<!-- <input id="v1" type="number">
-<input id="v2" type="number"> -->
 <script src="asg0.js"></script>
 <script src="lib/cuon-matrix-cse160.js"></script>
 </body>
